# LightSetter

./: .gitignore  Cargo.toml  Config.rs  Event.rs  EventRequest.rs  Hue.env  Light.rs  LightEvent.rs  Main.rs
DB/: Data.sql  Schema.sql
Install/: ExportEnvironmentVariables.sh  LightSetter.service  Makefile
Source/: Cargo.toml  Config.rs  Main.rs
Source/LookupError/: mod.rs
Source/Query/: Event.rs  Light.rs  mod.rs
Source/Requests/: mod.rs
Source/Types/: Event.rs  EventRequest.rs  Light.rs  mod.rs
